로컬라이제이션 일부 적용
튜토리얼, ch1 메인만 적용

--- a/Assets/Resources/Localization/LocalizationCSV/IntroUIText.csv
+++ b/Assets/Resources/Localization/LocalizationCSV/IntroUIText.csv
@@ -1,10 +1,10 @@
 ﻿Key,English (United States)(en-US),Korean (South Korea)(ko-KR)
-intro_BtnContinue,,이어 하기
-intro_BtnRestart,,새로 시작하기
-intro_BtnLanguage,,언어 설정
-intro_PopupRestart_text,,"“네가 길들인 것에 대해서는 언제까지나 책임이 있어.”\n그럼에도 현재의 모든 기억을 폐기하고, 새로 시작하시겠어요?"
-intro_PopupRestart_yes,,"네, 초기화할래요."
-intro_PopupRestart_no,,아니요. 취소할게요.
-intro_PopupLanguage_text,,인간에겐 ‘언어’라 불리우는 의사소통의 체계가 존재한다더군요. \n당신과 뭉치가 공유하게 될 언어를 선택해 주세요.
-intro_PopupLanguage_cancel,,취소하기
-intro_PopupLanguage_done,,설정하기
+intro_BtnContinue,영어,이어 하기
+intro_BtnRestart,영어,새로 시작하기
+intro_BtnLanguage,영어,언어 설정
+intro_PopupRestart_text,영어,"“네가 길들인 것에 대해서는 언제까지나 책임이 있어.”\n그럼에도 현재의 모든 기억을 폐기하고, 새로 시작하시겠어요?"
+intro_PopupRestart_yes,영어,"네, 초기화할래요."
+intro_PopupRestart_no,영어,아니요. 취소할게요.
+intro_PopupLanguage_text,영어,인간에겐 ‘언어’라 불리우는 의사소통의 체계가 존재한다더군요. \n당신과 뭉치가 공유하게 될 언어를 선택해 주세요.
+intro_PopupLanguage_cancel,영어,취소하기
+intro_PopupLanguage_done,영어,설정하기
